--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tiptap/extension-color": "^2.5.7",
+    "@tiptap/extension-text-style": "^2.5.7",
+    "@tiptap/pm": "^2.5.7",
+    "@tiptap/react": "^2.5.7",
+    "@tiptap/starter-kit": "^2.5.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
