--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tiptap/starter-kit": "^2.5.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.5.0",
