--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
